# NRL-Predict

./: .env  .env.example  .gitignore  OPENCLAW_QUICKSTART.md  PIPELINE_GUIDE.md  competition-Canstar - NRL-nrl-2025-21.csv  predict_round.py  project-prd.md  pyproject.toml  refresh_week.py  run_scrape.py  test_regex_quick.py  tipping_advisor.py  tipping_tracker.py
.pi/: settings.json
.pi-swarm/: history.jsonl  mail.json  scout-context.md  state.json
archive/: experiment_honest_eval.py  extract_nrl_json_data.py  run_v5_final_pipeline.py  scrape_nrl_match_stats.py  scrape_weather_data.py
config/: __init__.py  elo_params.json  feature_config.yaml  settings.py  team_mappings.py  venues.py  week_schedule.json
docs/: espn_footytips_api.md  late_change_edge_plan.md
evaluation/: __init__.py  backtesting.py  betting_simulation.py  metrics.py  reports.py
features/: __init__.py  early_season.py  game_context.py  odds_movement.py  opponent_adjusted.py  player_workload.py  roster_turnover.py  travel.py  weather.py
modelling/: __init__.py  baseline_models.py  calibration.py  classical_models.py  ensemble.py  hyperparameter_search.py  interpretability.py  model_registry.py  neural_models.py
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_comparison.ipynb  04_deep_dive_errors.ipynb  05_2026_predictions.ipynb
outputs/: tipping_log_2026.csv
pipelines/: __init__.py  build_features.py  predict_upcoming.py  scrape_all.py  train_and_evaluate.py  v3.py  v4.py
processing/: __init__.py  build_player_data.py  data_cleaning.py  data_linking.py  elo.py  (+5 more)
(+902 files in other folders)
